--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,16 @@
                 <version>${carbon.crypto.api.imp.pkg.version.range}</version>
             </dependency>
             <dependency>
+                <groupId>org.wso2.carbon.commons</groupId>
+                <artifactId>org.wso2.carbon.tenant.common</artifactId>
+                <version>${carbon.commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.core</artifactId>
+                <version>${carbon.kernel.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.eclipse.osgi</groupId>
                 <artifactId>org.eclipse.osgi</artifactId>
                 <version>${equinox.osgi.version}</version>
@@ -260,6 +270,8 @@
         <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
         <carbon.base.osgi.version.range>[1.0.0,1.1.0)</carbon.base.osgi.version.range>
         <commons-lang.version.range>[2.6.0, 3.0.0]</commons-lang.version.range>
+        <carbon.commons.imp.pkg.version>[4.4.0, 5.0.0)</carbon.commons.imp.pkg.version>
+        <carbon.kernel.imp.pkg.version.range>[4.4.0, 5.0.0)</carbon.kernel.imp.pkg.version.range>
 
         <!-- Dependency versions -->
         <carbon.kernel.version>4.4.11</carbon.kernel.version>
@@ -267,6 +279,7 @@
         <equinox.osgi.version>3.9.1.v20130814-1242</equinox.osgi.version>
         <equinox.osgi.services.version>3.5.100.v20160504-1419</equinox.osgi.services.version>
         <org.apache.felix.annotations.version>1.2.4</org.apache.felix.annotations.version>
+        <carbon.commons.version>4.5.2</carbon.commons.version>
 
         <!-- Plugin versions -->
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
